# KDUtils

.github/workflows/: build.yml
examples/: CMakeLists.txt
examples/socket_notification/: CMakeLists.txt  socket_notification.cpp
tests/auto/utils/bytearray/: tst_bytearray.cpp
